--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <link href="style.css" />
+    <link rel="stylesheet" href="style.css">
+
     
     <title>index
     </title>
